<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/motivation"
    android:padding="16dp"
    tools:context=".ui.UserActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/you_read"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/what_your_name"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_centerVertical="true"/>

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/save"
        android:textAllCaps="true"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"/>




</RelativeLayout>