<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">


    <LinearLayout
        android:id="@+id/liner_menu"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/motivation"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_inclusive"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/ic_inclusive" />

        <ImageView
            android:id="@+id/image_emoticon"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/ic_emoticon" />

        <ImageView
            android:id="@+id/image_sunny"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/ic_sunny" />


    </LinearLayout>


    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/liner_menu"
        android:layout_centerInParent="true"
        android:layout_marginTop="18dp"
        android:text="@string/hi_kotlin"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_phrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/new_text_phrase"
        android:textSize="22sp" />

    <View
        android:layout_width="128dp"
        android:layout_height="3dp"
        android:layout_below="@id/text_phrase"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@color/motivation"
        android:elevation="10dp"/>


    <Button
        android:id="@+id/button_new_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/motivation"
        android:textColor="@color/white"
        android:text="@string/new_phrase"
        android:textAllCaps="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:padding="16dp"/>


</RelativeLayout>